<resources>
    <string name="app_name">Lucky Fan App</string>
    <string name="about">About</string>
    <string name="description">"Lucky Fun" is not just an ordinary game; is a unique and exciting experience, offering three different modes to challenge and place of all ages \n\n
In the first smart place must haunt the observation skills while trying to find the right colour and on nine options with each level is a difficulty increases which gives player interest and eager to death the visual acuity. \n\n
The second mode adds an element of adrenaline-fueled excitement express compete against the clock to complete task within a limited period of time quick sinking and quick reaction as essential to success in this fast-paced environment. \n\n
in the short mode place must rally on their memory and ability to make quick decisions as they identify and select a disappearing colour before it is replaced by nine new options. Smart test memory retention and reaction time to enjoy fast-paced and fun gaming experience.</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="select_a_difficulty_level">Select a difficulty level</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="select_a_background">Select a background</string>
    <string name="select_the_time">Select the time</string>
    <string name="time_5s">5S</string>
    <string name="time_10s">10S</string>
    <string name="time_20s">20S</string>
    <string name="select_the_same_color">Select the same color:</string>
    <string name="end_time_text">Time: 0</string>
    <string name="end_score_text">Game Over! Final Score:</string>
    <string name="score">Score: </string>
    <string name="time">Time: </string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>
    <string name="score_0">Score: 0</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="statistic">Statistics</string>
    <string name="not_all_fields_are_filled_in">Not all fields are filled in!</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="user_is_not_found">User is not found!</string>
    <string name="asking_for_permission">Please grant usage stats permission</string>
    <string name="time_spent_message">Time spent in the app: %1$s</string>
    <string name="error_getting_documents">Error getting documents:</string>
    <string name="do_not_register_yet">Do not register yet?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="you_dont_want_to_login">You dont want to login? :)</string>
    <string name="registration_failed">Registration failed.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>