<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/RegistrationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_radio_button2"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/loginTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/black_han_sans"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/userEmailSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userLoginSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userPasswordSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/plain_text_login_registration"
            android:fontFamily="@font/black_han_sans"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewIsLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_registered"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
