<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/LoginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_radio_button2"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-153dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:id="@+id/loginTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/black_han_sans"
            android:gravity="center_horizontal"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/userLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/plain_text_login_registration"
            android:fontFamily="@font/black_han_sans"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:gravity="center"
            android:padding="10dp" />


        <TextView
            android:id="@+id/dontHaveAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/do_not_register_yet"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/dontLoginButton"
            android:layout_width="@dimen/round_button_size"
            android:layout_height="@dimen/round_button_size"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/you_dont_want_to_login"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
