<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#777777"
    android:backgroundTint="#606060"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/settingsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_screen_1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settingsTV"
            android:layout_width="141dp"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:fontFamily="@font/black_han_sans"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/difficultyBG"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_margin="20dp"
            android:background="@drawable/settings_field"
            android:orientation="vertical">

            <TextView
                android:id="@+id/difficultyTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/andika"
                android:text="@string/select_a_difficulty_level"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroupDifficulty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/lowRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_shape"
                    android:button="@null"
                    android:fontFamily="@font/andika"
                    android:padding="16dp"
                    android:text="@string/low"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/mediumRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_shape"
                    android:button="@null"
                    android:fontFamily="@font/andika"
                    android:padding="16dp"
                    android:text="@string/medium"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/hardRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_shape"
                    android:button="@null"
                    android:fontFamily="@font/andika"
                    android:padding="16dp"
                    android:text="@string/hard"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/backgroundBG"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:layout_margin="20dp"
            android:background="@drawable/settings_field"
            android:orientation="vertical">

            <TextView
                android:id="@+id/backgroundTV"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/andika"
                android:text="@string/select_a_background"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroupBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/backgroundFirstRB"
                    android:layout_width="54dp"
                    android:layout_height="98dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/background_radio_button1"
                    android:button="@null"/>

                <RadioButton
                    android:id="@+id/backgroundSecondRB"
                    android:layout_width="54dp"
                    android:layout_height="98dp"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/background_radio_button2"
                    android:button="@null"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeBG"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_margin="20dp"
            android:background="@drawable/settings_field"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/andika"
                android:text="@string/select_the_time"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroupTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fiveSecRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_shape"
                    android:button="@null"
                    android:fontFamily="@font/andika"
                    android:padding="16dp"
                    android:text="@string/time_5s"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/tenSecRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_shape"
                    android:button="@null"
                    android:fontFamily="@font/andika"
                    android:padding="16dp"
                    android:text="@string/time_10s"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/twentySecRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_shape"
                    android:button="@null"
                    android:fontFamily="@font/andika"
                    android:padding="16dp"
                    android:text="@string/time_20s"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>