<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_screen_2"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="44dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/statisticButton"
                android:layout_width="@dimen/round_button_size"
                android:layout_height="@dimen/round_button_size"
                android:layout_marginStart="@dimen/margin_for_round_buttons"
                android:layout_marginTop="@dimen/margin_for_round_buttons"
                android:background="@null"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/settings_round_button" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/informationButton"
                android:layout_width="@dimen/round_button_size"
                android:layout_height="@dimen/round_button_size"
                android:layout_marginEnd="@dimen/margin_for_round_buttons"
                android:layout_marginTop="@dimen/margin_for_round_buttons"
                android:background="@null"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/information_button" />
        </LinearLayout>


        <ImageView
            android:id="@+id/luckyFunTV"
            android:layout_width="@dimen/game_name_main_size"
            android:layout_height="@dimen/game_name_main_size"
            android:layout_gravity="center"
            app:srcCompat="@drawable/lucky_fun_text" />

        <ImageButton
            android:id="@+id/startButton"
            android:layout_width="@dimen/main_screen_button_width"
            android:layout_height="@dimen/main_screen_button_height"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/start"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/start_button" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="@dimen/main_screen_button_width"
            android:layout_height="@dimen/main_screen_button_height"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settings_button" />

        <ImageButton
            android:id="@+id/exitButton"
            android:layout_width="@dimen/main_screen_button_width"
            android:layout_height="@dimen/main_screen_button_height"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/exit"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/exit_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>